--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
   "devDependencies": {
     "eslint": "^7.4.0",
     "eslint-plugin-react": "^7.20.3",
-    "less": "^3.12.0",
     "parcel-bundler": "^1.12.4"
   },
   "dependencies": {
@@ -18,6 +17,7 @@
     "express": "^4.17.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "styled-components": "^5.1.1",
     "uuid": "^8.2.0"
   },
   "repository": {
