--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "msw": "^0.21.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "styled-components": "^5.2.1",
-    "uuid": "^8.3.1"
+    "styled-components": "^5.2.1"
   },
   "repository": {
     "type": "git",
